--- a/CursosLibres/web/css/default.css
+++ b/CursosLibres/web/css/default.css
@@ -77,4 +77,51 @@ span.psw {
   .cancelbtn {
     width: 100%;
   }
+  
+  #wrapper {
+    font-family: Raleway;
+    font-size: 12pt;
+}
+
+#contents {
+    padding: 4px 24px;
+}
+
+header {
+    background-color: slategray;
+    padding: 4px 24px;
+}
+
+header h1 {
+    font-family: RalewayBold;
+    font-size: 18pt;
+    margin: 8px 0px;
+}
+
+nav {
+    border-bottom: 1px solid darkslategray;
+    margin-bottom: 16px;
+    padding: 4px 24px;
+}
+  
+  .formulario  {
+    border: 1px solid gray;
+}
+
+.formulario  td {
+    padding: 4px 16px;
+}
+
+.formulario .etiqueta {
+    text-align: right;
+}
+
+.formulario .campo {
+}
+
+.formulario .botones {
+    border-top: 1px solid gray;
+    padding: 8px;
+    text-align: center;
+}
 }
