--- a/CursosLibres/web/css/listadoCurso.css
+++ b/CursosLibres/web/css/listadoCurso.css
@@ -39,3 +39,6 @@ and open the template in the editor.
 
 .listadoCurso td {
 }
+
+/*.let input {text-transform: lowercase;}
+.let input:first-letter {text-transform: uppercase;}*/
