--- a/CursosLibres/web/css/listadoCurso.css
+++ b/CursosLibres/web/css/listadoCurso.css
@@ -40,5 +40,5 @@ and open the template in the editor.
 .listadoCurso td {
 }
 
-/*.let input {text-transform: lowercase;}
-.let input:first-letter {text-transform: uppercase;}*/
+/*.let p:first-letter {text-transform: uppercase;}*/
+/*#etiquetas botonBuscar:first-letter {text-transform: uppercase;}*/
