--- a/CursosLibres/web/css/listadoEstudiante.css
+++ b/CursosLibres/web/css/listadoEstudiante.css
@@ -4,7 +4,7 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 */
 /* 
-    Created on : 09/05/2021, 05:37:00 PM
+    Created on : 09/05/2021, 07:09:44 PM
     Author     : YENDRI
 */
 
@@ -16,7 +16,7 @@ head {
     padding: 4px 24px;
 }
 
-.tablaCursos {
+.tablaPersonas {
     border: none;
     border-top: 2px solid darkslategrey;
     border-bottom: 2px solid darkslategrey;
@@ -24,28 +24,28 @@ head {
     font-size: smaller;
 }
 
-.tablaCursos th,
-.tablaCursos td {
+.tablaPersonas th,
+.tablaPersonas td {
     border: none;
     border-right: 1px solid darkslategrey;
     padding: 4px 12px;
 }
 
-.tablaCursos tr td:nth-child(n+5) {
+.tablaPersonas tr td:nth-child(n+5) {
     border-right: none;
 }
 
-.tablaCursos tbody tr:nth-child(odd) {
+.tablaPersonas tbody tr:nth-child(odd) {
     background-color: #afd1d1;
 }
 
-.tablaCursos th {
+.tablaPersonas th {
     background-color: darkslategrey;
     border: none;
     color: blanchedalmond;
 }
 
-.tablaCursos td {
+.tablaPersonas td {
 }
 
 header {
