--- a/CursosLibres/web/css/registroProfesor.css
+++ b/CursosLibres/web/css/registroProfesor.css
@@ -9,7 +9,7 @@ and open the template in the editor.
 */
 
 form {
-  border: 3px solid #f1f1f1;
+  border: 3px solid #f44336;
 }
 
 #wrapper {
@@ -22,7 +22,6 @@ form {
 }
 
 header {
-    background-color: slategray;
     padding: 4px 24px;
 }
 
@@ -58,3 +57,10 @@ nav {
     padding: 8px;
     text-align: center;
 }
+
+.formulario {
+    width: 150px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
